# Caption-Text-Predictions

./: api.py  model.ipynb  model.py  pyproject.toml  scrape.py  test-gensim.py
