[tool.poetry]
name = "demo"
version = "0.1.0"
description = "demo project to showcase caption tagging"
authors = ["Thoth <thoth2357@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.2"
requests = "^2.29.0"
bs4 = "^0.0.1"
selenium = "^4.9.0"
fake-useragent = "^1.1.3"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
